# purescript-cst-rewrite

./: .gitmodules  README.md  purescript-cst-rewrite.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
example-dir/: example2.purs
example-dir/src/: example2.purs
src/Data/: CSTRewrite.hs
src/Data/CSTRewrite/: Parser.hs  Rule.hs
test/: Main.hs  Spec.hs
test/data/: circular-rename-simple-import.diff  circular-rename-simple-module.diff  circular-rename.diff  example.purs  import-rename-plural.diff  import-rename-single.diff  import-shorten.diff  module-rename-single.diff  staged-rename.diff
test/data/example-modules/: foo-lib.purs  foo-multi-import.purs  staged-rename.purs
