name:                purescript-cst-rewrite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jisantuc/purescript-cst-rewrite#readme
license:             MIT
license-file:        LICENSE.txt
author:              James Santucci
maintainer:          james.santucci@gmail.com
copyright:           2021 James Santucci
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.CSTRewrite
                     , Data.CSTRewrite.Parser
                     , Data.CSTRewrite.Rule
  build-depends:       base >= 4.7 && < 5
                     , purescript-ast
                     , purescript-cst
                     , parsec
                     , text
  default-language:    Haskell2010

executable purescript-fix
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , purescript-ast
                     , purescript-cst
                     , text
                     , purescript-cst-rewrite
  default-language:    Haskell2010

test-suite cst-rewrite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , purescript-ast
                     , purescript-cst
                     , purescript-cst-rewrite
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/purescript-cst-rewrite
